--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -62,19 +62,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe number \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumber\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is less than 0\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
    "source": [
+    "number = (input())\n",
     "if number < 0:\n",
     "    print (f'The number {number} is less than 0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The score  26 is less than or equal to 90\n"
+     ]
+    }
+   ],
    "source": [
     "x = input(\"Enter your score\")\n",
     "\n",
@@ -86,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grade : F\n"
+     ]
+    }
+   ],
    "source": [
     "score = int(input('Enter your score'))\n",
     "if score > 90:\n",
@@ -97,7 +126,10 @@
     "\tif score > 80 :   # (score < 90 ) and ( score >80)\n",
     "\t\tprint (\"The grade : B\")\n",
     "\telif score > 70:   # (score < 80 ) and ( score >70)\n",
-    "\t\tprint (\"The grade : C\")\n"
+    "\t\tprint (\"The grade : C\")\n",
+    "\telse:\n",
+    "\t\tprint ('The grade : F')\n",
+    "\t\t\n"
    ]
   },
   {
@@ -113,9 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 22 is even number\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "if number % 2 == 0:\n",
@@ -137,13 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 101 is not less than or equal to 100\n"
+     ]
+    }
+   ],
    "source": [
-    "number = int(input('Enter a number'))\n",
+    "# complete the code\n",
+    "number = int(input())\n",
     "\n",
-    "# Complete the code"
+    "if number <= 100:\n",
+    "    print(f'The number {number} is less than or equal to 100')\n",
+    "else:\n",
+    "    print(f'The number {number} is not less than or equal to 100')    \n",
+    "\n"
    ]
   },
   {
@@ -159,15 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "name = input('Enter a name')\n",
+    "name = input()\n",
     "\n",
-    "if # complete the code\n",
+    "if name.startswith('A'):\n",
     "    result = True\n",
-    "    \n",
+    "else:    \n",
+    "    result = False\n",
+    "print(result)\n",
     "    "
    ]
   },
@@ -185,26 +248,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "val1 = 12.34; val2 = 12.340000000000000001\n",
     "\n",
     "if val1 == val2:\n",
-    "    print ('Two value are same')"
+    "    result = True\n",
+    "else: \n",
+    "    result = False\n",
+    "print(result)        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "val1 = 12.34; val2 = 12.340000000001\n",
     "\n",
     "if val1 == val2:\n",
-    "    print ('Two value are same')"
+    "    result = True\n",
+    "else:\n",
+    "    result =False\n",
+    "print(result)        "
    ]
   },
   {
@@ -224,12 +309,23 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ashley\n"
+     ]
+    }
+   ],
    "source": [
-    "strval1 = input('Enter a word')\n",
-    "strval2 = input('Enter a word')\n",
+    "strval1 = input()\n",
+    "strval2 = input()\n",
     "\n",
-    "# complete the code"
+    "if strval1 < strval2:\n",
+    "    print(strval1)\n",
+    "else:\n",
+    "    print(strval2)    "
    ]
   },
   {
@@ -248,14 +344,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chavarria\n"
+     ]
+    }
+   ],
    "source": [
-    "strval1 = input('Enter a word')\n",
-    "strval2 = input('Enter a word')\n",
+    "strval1 = input()\n",
+    "strval2 = input()\n",
     "\n",
-    "# complete the code\n"
+    "if len(strval1) > len(strval2):\n",
+    "    print(strval1)\n",
+    "else:\n",
+    "    print(strval2)    \n",
+    "\n"
    ]
   },
   {
@@ -1409,7 +1517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
