--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -62,25 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe number \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumber\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is less than 0\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number -1 is less than 0\n"
      ]
     }
    ],
    "source": [
-    "number = (input())\n",
+    "number = int(input())\n",
     "if number < 0:\n",
-    "    print (f'The number {number} is less than 0')"
+    "    print (f'The number {number} is less than 0')\n",
+    "else:\n",
+    "    print (f'The number {number} is greater than 0')    "
    ]
   },
   {
