--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 2 is greater than 0\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter the number'))\n",
     "\n",
