--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -406,9 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grade : F\n"
+     ]
+    }
+   ],
    "source": [
     "# Take one user input \n",
     "# if it is even number, print \n",
@@ -420,14 +428,26 @@
     "elif score > 80 :   # (score < 90 ) and ( score >80)\n",
     "\tprint (\"The grade : B\")\n",
     "elif score > 70:   # (score < 80 ) and ( score >70)\n",
-    "\tprint (\"The grade : C\")\n"
+    "\tprint (\"The grade : C\")\n",
+    "elif score > 60:\n",
+    "\tprint ('The grade : D')\n",
+    "else:\n",
+    "\tprint ('The grade : F')\t\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The score  85  is great than 80\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input(\"Enter your score\"))\n",
     "\n",
@@ -457,13 +477,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final grade : D\n"
+     ]
+    }
+   ],
    "source": [
-    "score = int(input('Enter a score'))\n",
+    "# Complete the code\n",
     "\n",
-    "# complete the code\n"
+    "score = int(input())\n",
+    "\n",
+    "if score > 90:\n",
+    "    print('The final grade : A')\n",
+    "elif score > 80:\n",
+    "    print('The final grade : B')\n",
+    "elif score > 70:\n",
+    "    print('The final grade : C')\n",
+    "elif score > 60:\n",
+    "    print('The final grade : D')\n",
+    "else:\n",
+    "    print('The final grade : F')               "
    ]
   },
   {
@@ -482,13 +521,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd\n"
+     ]
+    }
+   ],
    "source": [
-    "number = int(input('Enter a number'))\n",
+    "number = int(input())\n",
     "\n",
-    "# complete the code\n"
+    "if number == 0:\n",
+    "    print('Zero')\n",
+    "elif number % 2 == 0:\n",
+    "    print('Even')\n",
+    "else:\n",
+    "    print('Odd')        "
    ]
   },
   {
@@ -512,13 +564,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 3\n"
+     ]
+    }
+   ],
    "source": [
-    "number = int(input('Enter a number'))\n",
+    "#complete the code\n",
+    "number = int(input())\n",
     "\n",
-    "# complete the code"
+    "if number < 0:\n",
+    "    print('Case 1')\n",
+    "elif number < 100:\n",
+    "    print('Case 2')\n",
+    "else:\n",
+    "    print('Case 3')        \n"
    ]
   },
   {
@@ -546,14 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100  is greater thatn 100\n"
+      "25  is less than 50\n"
      ]
     }
    ],
@@ -573,15 +639,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "8  is even number\n"
+      "81\n",
+      "81  is odd number\n"
      ]
     }
    ],
@@ -613,9 +679,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 31 is greater than or equal to 0 and less than 100\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "\n",
@@ -650,17 +724,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range: 3\n"
+     ]
+    }
+   ],
    "source": [
-    "number = int(input('Enter a number'))\n",
+    "number = int(input())\n",
     "\n",
     "if number < 0:\n",
     "    range = 1\n",
     "else:\n",
-    "    if # complete the code\n",
-    "        range = 2"
+    "    if number < 100:\n",
+    "        range = 2\n",
+    "    else:\n",
+    "        range = 3\n",
+    "print('Range:', range)            "
    ]
   },
   {
@@ -687,14 +772,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num1 = int(input('Enter a number '))\n",
-    "num2 = int(input('Enter a number '))\n",
-    "num3 = int(input('Enter a number '))\n",
+    "num1 = int(input())\n",
+    "num2 = int(input())\n",
+    "num3 = int(input())\n",
     "\n",
     "if num1 < num2:\n",
-    "    # Complete the code. Only use Nested-If structure. If - else\n",
-    "    # No and/or \n",
-    "    # No elif\n",
+    "    \n",
     "    "
    ]
   },
