--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -768,16 +768,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input())\n",
     "num2 = int(input())\n",
     "num3 = int(input())\n",
     "\n",
     "if num1 < num2:\n",
-    "    \n",
+    "    print(num1)\n",
+    "else:\n",
+    "    if num2 < num3:\n",
+    "        print(num2)\n",
+    "    else:\n",
+    "        print(num3)        \n",
     "    "
    ]
   },
@@ -810,11 +823,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score is out of range\n"
+     ]
+    }
+   ],
    "source": [
-    "score = int(input(\"Enter your score\"))\n",
+    "score = int(input())\n",
     "\n",
     "if ( score < 0 or score > 100):\n",
     "\tprint (\"Score is out of range\")\n",
@@ -823,14 +844,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25  is between 0 and 100 \n"
+     ]
+    }
+   ],
    "source": [
     "# Take the score\n",
     "# Check the scoer is between 0 and 100\n",
     "#  \n",
-    "score = int(input(\"Enter your score\"))\n",
+    "score = int(input())\n",
     "if score >= 0 and score <= 100:\n",
     "\tprint (score, \" is between 0 and 100 \")\n",
     "else:\n",
@@ -854,16 +883,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num1 is positive\n"
+     ]
+    }
+   ],
    "source": [
-    "num1 = int(input('Enter the num1'))\n",
-    "num2 = int(input('Enter the num2'))\n",
+    "num1 = int(input())\n",
+    "num2 = int(input())\n",
     "\n",
     "if num1 > 0 and num2 > 0:\n",
     "    print ('Two values are positive')\n",
-    "elif # complete the code\n"
+    "elif num1 < 0 and num2 > 0:\n",
+    "    print('num2 is positive')\n",
+    "elif  num1 > 0 and num2 < 0:\n",
+    "    print('num1 is positive')    \n",
+    "\n"
    ]
   },
   {
@@ -883,17 +924,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num1 is positive\n"
+     ]
+    }
+   ],
    "source": [
-    "num1 = int(input('Enter the num1'))\n",
-    "num2 = int(input('Enter the num2'))\n",
+    "num1 = int(input())\n",
+    "num2 = int(input())\n",
     "\n",
-    "if num1 > 0:\n",
-    "    # complete the code\n",
+    "if num1 > 0 and num2 > 0:\n",
+    "    print('Two values are positive')\n",
     "else:\n",
-    "    # complete the code"
+    "    if num1 < 0 and num2 > 0:\n",
+    "        print('num2 is positive')\n",
+    "    else:\n",
+    "        print('num1 is positive')\n"
    ]
   },
   {
@@ -920,14 +972,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One of two values are less than 0\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = -10\n",
     "num2 = 20\n",
     "\n",
-    "if # complete your code\n",
+    "if num1 <= 0 or num2 <= 0:\n",
     "    print ('One of two values are less than 0')\n"
    ]
   },
@@ -949,14 +1009,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num1 is greater than 0 and less than 100\n"
+     ]
+    }
+   ],
    "source": [
-    "num1 = int(input('Enter a number'))\n",
+    "num1 = int(input())\n",
     "\n",
-    "if # complete the same condition without \"and\" operator as num1 > 0 and num1 < 100\n",
-    "# if num1 > 0 and num1 < 100:\n",
+    "if 0 < num1 < 100:\n",
     "    print ('num1 is greater than 0 and less than 100')"
    ]
   },
@@ -974,13 +1041,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55 is greater than 50 but less than 100\n"
+     ]
+    }
+   ],
    "source": [
-    "number = int(input('Enter the number'))\n",
+    "number = int(input())\n",
     "\n",
-    "if # complete the code"
+    "if number> 50 < 100:\n",
+    "    print(f'{number} is greater than 50 but less than 100')"
    ]
   },
   {
@@ -1002,14 +1078,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Condition True\n"
+     ]
+    }
+   ],
    "source": [
-    "num = # set your value to num to make the conditino True\n",
+    "# no number will make this statement true \n",
+    "# num = 100\n",
     "\n",
-    "if num < 0 and num > 100:\n",
-    "    print ('Condition True')"
+    "# if num < 0 and num > 100:\n",
+    "#    print ('Condition True')\n",
+    "\n",
+    "# it could re-written this way to make it true\n",
+    "num = 101   \n",
+    "if num > 0 and num > 100:\n",
+    "    print('Condition True') "
    ]
   },
   {
@@ -1052,9 +1142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100  is less than  90\n"
+     ]
+    }
+   ],
    "source": [
     "score1 = 100\n",
     "score2 = 90\n",
@@ -1079,9 +1177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num  = 22\n",
     "even = 1 if num % 2 == 0 else 0\n",
@@ -1090,9 +1199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100  is greater than 90\n"
+     ]
+    }
+   ],
    "source": [
     "print (score2, \" is greater than \", score1) if ( score1 < score2) else print(score1, \" is greater than\", score2)"
    ]
@@ -1106,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1291,7 @@
        "False"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,16 +1302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "True and True and True # will return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1345,7 @@
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,9 +1359,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num1 = 10; num2 = 20; \n",
     "\n",
@@ -1243,9 +1382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num1 = 10; num2 = 20; \n",
     "\n",
@@ -1255,9 +1405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 5\n",
@@ -1269,9 +1428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 5\n",
@@ -1281,9 +1448,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1,2,3,4,5]\n",
     "\n",
@@ -1310,13 +1485,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num = int(input('Enter a num: '))\n",
+    "num = int(input())\n",
     "\n",
-    "flag = 0 # complete this code"
+    "flag = 0 if num < 0 else 1\n",
+    "flag"
    ]
   },
   {
@@ -1354,9 +1541,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary  is greater than or equal to Macy\n"
+     ]
+    }
+   ],
    "source": [
     "name1 = 'Mary'\n",
     "name2 = 'Macy'\n",
@@ -1370,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1405,9 +1600,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary  is shorter than Mariella\n"
+     ]
+    }
+   ],
    "source": [
     "name1 = 'Mary'\n",
     "name2 = 'Mariella'\n",
@@ -1449,9 +1652,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'BANANA'.isupper()\n",
     "\n",
@@ -1464,9 +1678,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'three!'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "'   spacious   '.lstrip()\n",
@@ -1494,9 +1719,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "@company.com\n",
+      "@c\n",
+      "@company.com\n",
+      "@company.com\n",
+      "@company.com\n"
+     ]
+    }
+   ],
    "source": [
     "email_str = \"name@company.com\"\n",
     "idx = email_str.find('@')\n",
@@ -1517,9 +1755,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Monty'"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "'   spacious   '.rstrip()\n",
@@ -1533,9 +1782,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -1559,9 +1819,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[102], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m input_str \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter two numbers\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m (input_str)\n\u001b[0;32m----> 3\u001b[0m x,y \u001b[38;5;241m=\u001b[39m input_str\u001b[38;5;241m.\u001b[39msplit() \n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;28mint\u001b[39m(x))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;28mint\u001b[39m(y))\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
    "source": [
     "input_str = input('Enter two numbers')\n",
     "print (input_str)\n",
